# MRAnalytics

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  dashboard.py  pyproject.toml  requirements.txt  run_all.py  run_server.py
migrations/: README.md  env.py
migrations/versions/: 240408013000_create_metrics_table.py  260408174153_add_changes_requested_field_to_metrics_.py
src/: __init__.py  app_factory.py  application.py  main.py
src/core/: config.py  containers.py  errors.py  factory.py  logging.py
src/core/fastapi/: error.py  responses.py  routes.py
src/db/: connection.py  transaction.py
src/dependency/: __init__.py  container.py  uow_container.py  use_case_container.py
src/infrastructure/clients/: __init__.py  base.py  github.py  gitlab.py
src/modules/mr_analytics/: __init__.py
src/modules/mr_analytics/application/: analytics_services.py  services.py
src/modules/mr_analytics/domain/: constants.py  enums.py  value_objects.py
src/modules/mr_analytics/domain/aggregate/: __init__.py  model.py
src/modules/mr_analytics/infrastructure/: __init__.py  dto.py
src/modules/mr_analytics/infrastructure/persistence/: mapper.py  repository.py  uow.py
src/modules/mr_analytics/infrastructure/query/: dto.py  uow.py
src/modules/mr_analytics/usecase/: __init__.py  router.py
src/modules/mr_analytics/usecase/analyze_burnout/: __init__.py  api.py  command.py  impl.py
src/modules/mr_analytics/usecase/fetch_mrs/: api.py  command.py  impl.py
src/modules/mr_analytics/usecase/get_metrics/: __init__.py  api.py  command.py  impl.py
src/modules/seedwork/: __init__.py  base_usecase.py  mixin.py
src/modules/utils/: errors.py
src/persistance/: __init__.py  async_repository.py  base.py
src/persistance/mr_metrics/: __init__.py  entity.py  repository.py
src/persistance/mr_metrics/impl/: repository.py
src/utils/: wiring_modules.py
tests/: test_analyze_burnout.py  test_api_endpoints.py  test_application_services.py  test_domain_models.py  test_get_metrics.py  test_infrastructure.py  test_predict_risk.py  test_process_mrs.py  test_suggest_reviewers.py
(+22 files in other folders)
