[tool.poetry]
name = "mr-analytics"
version = "0.1.0"
description = "GitLab/GitHub MR Analytics Dashboard"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pandas = "^2.1.4"
streamlit = "^1.29.0"
plotly = "^5.18.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.8.0"
dependency-injector = "^4.45.0"
loguru = "^0.7.3"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
aiosqlite = "^0.20.0"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.23.0"
black = "^24.10.0"
ruff = "^0.5.0"
mypy = "^1.17.0"


[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
