[tool.poetry]
name = "mr-analytics"
version = "0.1.0"
description = "GitLab/GitHub MR Analytics Dashboard"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
fastapi = "0.115.11"
uvicorn = "0.34.0"
python-dotenv = "1.0.1"
pydantic = "2.10.6"
pydantic-settings = "2.8.1"
sqlalchemy = "2.0.39"
alembic = "1.15.1"
asyncpg = "0.30.0"
psycopg2-binary = "^2.9.0"
loguru = "0.7.3"
dependency-injector = "4.45.0"
orjson = "^3.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"
pytest-asyncio = "0.23.8"
black = "24.10.0"
ruff = "0.4.10"


[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
